add opinions in AccountFragment.kt

--- a/app/src/main/res/navigation/volunteer_nav_graph.xml
+++ b/app/src/main/res/navigation/volunteer_nav_graph.xml
@@ -29,7 +29,15 @@
         android:id="@+id/accountFragment2"
         android:name="com.example.pomocnysasiad.fragment.AccountFragment"
         android:label="fragment_account"
-        tools:layout="@layout/fragment_account" />
+        tools:layout="@layout/fragment_account" >
+        <action
+            android:id="@+id/action_accountFragment2_to_accountReputationFragment"
+            app:destination="@id/accountReputationFragment"
+            app:enterAnim="@anim/from_left"
+            app:exitAnim="@anim/from_right"
+            app:popEnterAnim="@anim/from_left"
+            app:popExitAnim="@anim/from_right" />
+    </fragment>
     <fragment
         android:id="@+id/searchRequestFragment2"
         android:name="com.example.pomocnysasiad.fragment.SearchRequestFragment"
