--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -35,13 +35,14 @@
             android:textSize="24sp" />
 
         <RatingBar
+            android:id="@+id/accountRatingBar"
             style="@style/RatingTheme"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:numStars="5" />
 
         <Button
-            android:id="@+id/opinionsBtn"
+            android:id="@+id/accountOpinionsBtn"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="Opinie o mnie"
