--- a/app/src/main/res/navigation/inneed_nav_graph.xml
+++ b/app/src/main/res/navigation/inneed_nav_graph.xml
@@ -29,7 +29,15 @@
         android:id="@+id/accountFragment3"
         android:name="com.example.pomocnysasiad.fragment.AccountFragment"
         android:label="fragment_account"
-        tools:layout="@layout/fragment_account" />
+        tools:layout="@layout/fragment_account" >
+        <action
+            android:id="@+id/action_accountFragment3_to_accountReputationFragment2"
+            app:destination="@id/accountReputationFragment2"
+            app:enterAnim="@anim/from_left"
+            app:exitAnim="@anim/from_right"
+            app:popEnterAnim="@anim/from_left"
+            app:popExitAnim="@anim/from_right" />
+    </fragment>
     <fragment
         android:id="@+id/createRequestFragment"
         android:name="com.example.pomocnysasiad.fragment.CreateRequestFragment"
