--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -81,7 +81,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="8sp"
+                    android:padding="8dp"
                     android:textColor="@color/white"
                     android:textSize="14sp"
                     android:fontFamily="@font/montserrat_regular"
