--- a/app/src/main/res/layout/fragment_account_reputation.xml
+++ b/app/src/main/res/layout/fragment_account_reputation.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/frameLayout3"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,23 +9,72 @@
     tools:context=".fragment.AssessFragment"
     android:gravity="center">
 
-    <TextView
-        android:id="@+id/reputationUser"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_bg_account"
+            android:layout_alignTop="@+id/headerLayout"
+            android:layout_alignBottom="@+id/headerLayout"
+            android:layout_alignStart="@+id/headerLayout"
+            android:layout_alignEnd="@+id/headerLayout"/>
 
-    <RatingBar
-        android:id="@+id/reputationRatingBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:isIndicator="true"/>
+        <LinearLayout
+            android:id="@+id/headerLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:elevation="10dp"
+            android:padding="30dp"
+            android:gravity="center"
+            android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/reputationHelpCounter"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
+            <TextView
+                android:id="@+id/reputationUser"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                android:padding="10dp"
+                android:textSize="24sp"
+                android:textColor="@color/white" />
+
+            <RatingBar
+                android:id="@+id/reputationRatingBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="@style/RatingTheme"
+                android:numStars="5" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:gravity="center">
+
+                <TextView
+                    android:id="@+id/reputationHelpCounter"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="0"
+                    android:textSize="48sp"
+                    android:textColor="@color/white"
+                    android:layout_marginTop="-10dp"
+                    android:layout_marginBottom="-10dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="OPINIE"
+                    android:textSize="14sp"
+                    android:textColor="@color/white"
+                    android:padding="8dp" />
+
+            </LinearLayout>
+        </LinearLayout>
+    </RelativeLayout>
+
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/reputationOpinionRecycler"
